--- a/mainpage/templates/mainpage/main.html
+++ b/mainpage/templates/mainpage/main.html
@@ -4,14 +4,15 @@
 <html lang="en">
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109064262-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H816MX22BL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-		gtag('config', 'UA-109064262-1');
-	</script>
+  gtag('config', 'G-H816MX22BL');
+
+</script>
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -115,7 +116,7 @@
 				<h2 class="pfblock-title">ABOUT ME</h2>
 				<div class="pfblock-line"></div>
 				<div class="pfblock-header wow fadeInUp">
-					<img id="myphoto" src="{% static 'mainpage/images/me.jpg' %}" alt="Vladislav Moroshan" style="border-radius: 100%;overflow : hidden; ">
+					<img id="myphoto" class="rounded-circle" alt="100x100" src="{% static 'mainpage/images/me.jpg' %}" alt="Vladislav Moroshan" style="border-radius: 100%;overflow : hidden; ">
 				</div>
 					<div class="pfblock-header wow fadeInUp">
 						<div class="pfblock-subtitle">
@@ -343,7 +344,7 @@
 					<h2 class="pfblock-title">Contact</h2>
 					<div class="pfblock-line"></div>
 					<div class="pfblock-subtitle">
-I'm actively looking for a Job Switch. I'm a Backend Developer who have 1+ years of experience in developing and Supporting various Backend Django applications also have some handson experience in AWS developer enviroment. Feel free to drop a message here or call me if you have a openning.
+I'm actively looking for a Job Switch. I'm a Backend Developer with 1+ years of experience in developing and Supporting various Backend Django applications also have some handson experience in AWS developer enviroment. Feel free to drop a message here or call me if you have a openning.
 					</div>
 				</div>
 
